gen/tpu/v1alpha1/generator-errors.log
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on build directory
    Checking google-tpu1_alpha1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/tpu/v1alpha1/lib)
error[E0423]: expected value, found struct `locations::LocationsActions`
   --> gen/tpu/v1alpha1/lib/src/lib.rs:811:13
    |
811 |             locations::LocationsActions
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `locations::LocationsActions { /* fields */ }`?

error[E0423]: expected value, found struct `accelerator_types::AcceleratorTypesActions`
   --> gen/tpu/v1alpha1/lib/src/lib.rs:864:17
    |
864 |                 accelerator_types::AcceleratorTypesActions
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `accelerator_types::AcceleratorTypesActions { /* fields */ }`?

error[E0423]: expected value, found struct `nodes::NodesActions`
   --> gen/tpu/v1alpha1/lib/src/lib.rs:868:17
    |
868 |                 nodes::NodesActions
    |                 ^^^^^^^^^^^^^^^^^^^ did you mean `nodes::NodesActions { /* fields */ }`?

error[E0423]: expected value, found struct `operations::OperationsActions`
   --> gen/tpu/v1alpha1/lib/src/lib.rs:872:17
    |
872 |                 operations::OperationsActions
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `operations::OperationsActions { /* fields */ }`?

error[E0423]: expected value, found struct `tensorflow_versions::TensorflowVersionsActions`
   --> gen/tpu/v1alpha1/lib/src/lib.rs:876:17
    |
876 |                 tensorflow_versions::TensorflowVersionsActions
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `tensorflow_versions::TensorflowVersionsActions { /* fields */ }`?

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0423`.
error: Could not compile `google-tpu1_alpha1`.

To learn more, run the command again with --verbose.
